--- a/inthe_am/taskmanager/static/foundation/scss/tw_colors.scss
+++ b/inthe_am/taskmanager/static/foundation/scss/tw_colors.scss
@@ -2,7 +2,7 @@
 	background-color: #5f5f37;
 }
 .task.active .calendar__today {
-	background-color: darken(#5f5f37, 10%)
+	background-color: lighten(#5f5f37, 10%)
 }
 .task .tagged {
 	color: #afd787;
@@ -14,7 +14,7 @@
 	background-color: #37ff37;
 }
 .task.active .history__delete {
-	background-color: darken(#37ff37, 10%)
+	background-color: lighten(#37ff37, 10%)
 }
 .task .sync__rejected {
 	color: #5f5f37;
@@ -27,7 +27,7 @@
 	background-color: #5f5f37;
 }
 .task.active .blocked {
-	background-color: darken(#5f5f37, 10%)
+	background-color: lighten(#5f5f37, 10%)
 }
 .task .due__today {
 	color: #d75f37;
@@ -45,7 +45,7 @@
 	background-color: #37af37;
 }
 .task.active .summary__bar {
-	background-color: darken(#37af37, 10%)
+	background-color: lighten(#37af37, 10%)
 }
 .task .sync__changed {
 	color: #d7af37;
@@ -54,7 +54,7 @@
 	background-color: #ffffff;
 }
 .task.active .alternate {
-	background-color: darken(#ffffff, 10%)
+	background-color: lighten(#ffffff, 10%)
 }
 .task .due {
 	color: #d78737;
@@ -63,13 +63,13 @@
 	background-color: #d7af37;
 }
 .task.active .burndown__started {
-	background-color: darken(#d7af37, 10%)
+	background-color: lighten(#d7af37, 10%)
 }
 .task .calendar__overdue {
 	background-color: #d73737;
 }
 .task.active .calendar__overdue {
-	background-color: darken(#d73737, 10%)
+	background-color: lighten(#d73737, 10%)
 }
 .task .calendar__weekend {
 }
@@ -77,7 +77,7 @@
 	background-color: #37af37;
 }
 .task.active .history__done {
-	background-color: darken(#37af37, 10%)
+	background-color: lighten(#37af37, 10%)
 }
 .task .recurring {
 	color: #afd7af;
@@ -92,13 +92,13 @@
 	background-color: #378737;
 }
 .task.active .calendar__holiday {
-	background-color: darken(#378737, 10%)
+	background-color: lighten(#378737, 10%)
 }
 .task .burndown__done {
 	background-color: #d2d2d2;
 }
 .task.active .burndown__done {
-	background-color: darken(#d2d2d2, 10%)
+	background-color: lighten(#d2d2d2, 10%)
 }
 .task .pri__M {
 	color: #37af37;
@@ -116,7 +116,7 @@
 	background-color: #af5f37;
 }
 .task.active .active {
-	background-color: darken(#af5f37, 10%)
+	background-color: lighten(#af5f37, 10%)
 }
 .task .undo__before {
 	color: #37af5f;
@@ -126,13 +126,13 @@
 	background-color: #878737;
 }
 .task.active .blocking {
-	background-color: darken(#878737, 10%)
+	background-color: lighten(#878737, 10%)
 }
 .task .burndown__pending {
 	background-color: #5f5f37;
 }
 .task.active .burndown__pending {
-	background-color: darken(#5f5f37, 10%)
+	background-color: lighten(#5f5f37, 10%)
 }
 .task .header {
 	color: #37af5f;
@@ -141,19 +141,19 @@
 	background-color: #d75f37;
 }
 .task.active .calendar__due__today {
-	background-color: darken(#d75f37, 10%)
+	background-color: lighten(#d75f37, 10%)
 }
 .task .calendar__due {
 	background-color: #d7af37;
 }
 .task.active .calendar__due {
-	background-color: darken(#d7af37, 10%)
+	background-color: lighten(#d7af37, 10%)
 }
 .task .history__add {
 	background-color: #375f37;
 }
 .task.active .history__add {
-	background-color: darken(#375f37, 10%)
+	background-color: lighten(#375f37, 10%)
 }
 .task .error {
 	color: #37af5f;
